changed original background image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,7 +37,7 @@ body {
   height: 100vh;
   transition: ease-in-out 0.3s;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url('https://images.unsplash.com/photo-1558642084-fd07fae5282e?crop=entropy&cs=srgb&fm=jpg&ixid=MXwxODg1NzN8MHwxfHNlYXJjaHwxfHx8ZW58MHwxfHw&ixlib=rb-1.2.1&q=85');
+    url('https://images.unsplash.com/photo-1601168647992-0d43afde4b58?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxODg1NzN8MHwxfHNlYXJjaHwxfHxMb25kb24tbGFuZHNjYXBlfGVufDB8MXx8&ixlib=rb-1.2.1&q=80&w=1080');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
