--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 //universal opacity class
-.opacity{
+.opacity {
   opacity: 0.9;
 }
 // hide places icon
@@ -18,14 +18,26 @@ body {
   background-attachment: fixed;
   font-family: 'Montserrat', sans-serif !important;
   user-select: none;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url('https://images.unsplash.com/photo-1601168647992-0d43afde4b58?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxODg1NzN8MHwxfHNlYXJjaHwxfHxMb25kb24tbGFuZHNjYXBlfGVufDB8MXx8&ixlib=rb-1.2.1&q=80&w=1080');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
 /* Wrapper so overflow hidden works on mobile devices */
 .wrapper {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   position: relative;
   overflow: hidden;
+  margin: auto;
+  max-width: 500px;
 }
 
 /* Main container for content */
@@ -34,17 +46,12 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  margin: auto;
   height: 100vh;
   transition: ease-in-out 0.3s;
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url('https://images.unsplash.com/photo-1601168647992-0d43afde4b58?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxODg1NzN8MHwxfHNlYXJjaHwxfHxMb25kb24tbGFuZHNjYXBlfGVufDB8MXx8&ixlib=rb-1.2.1&q=80&w=1080');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-
-  .delete-icon{
+  
+  .delete-icon {
     position: absolute;
     top: 1.3rem;
     left: 1rem;
@@ -63,8 +70,9 @@ body {
     }
   }
   .daily-weather-container {
-    display: flex;
+    width: 100%;
   }
+  
   .daily-weather-item {
     display: flex;
     flex-direction: column;
@@ -75,8 +83,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width:100%;
-    max-width:350px;
+    width: 100%;
     height: 60%;
   }
   .weather-data-item {
@@ -86,10 +93,10 @@ body {
   }
   // PAGE NAVIGATION DOTS
   .page-navigation {
-    position:absolute;
+    position: absolute;
     display: flex;
     justify-content: center;
-    bottom:0.5rem;
+    bottom: 0.5rem;
     list-style: none;
     z-index: 1000;
     padding: 0;
@@ -101,10 +108,10 @@ body {
       width: 10px;
       height: 10px;
       padding: 0;
-      margin:0 0.3rem;
+      margin: 0 0.3rem;
       cursor: pointer;
     }
-    .active{
+    .active {
       background: #fff;
     }
   }
