--- a/src/scss/swipe.scss
+++ b/src/scss/swipe.scss
@@ -5,12 +5,14 @@
   position: relative;
   height: 100vh;
   width: 100vw;
+  max-width: 500px;
+  margin: auto;
 }
 .swipe-wrap {
   overflow: hidden;
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 .swipe-wrap > div {
   display: flex;
@@ -21,5 +23,5 @@
   position: relative;
   overflow: hidden;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
