--- a/src/scss/swipe.scss
+++ b/src/scss/swipe.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   width: 100vw;
   max-width: 500px;
-  margin: auto;
+  transition: ease-in-out 0.3s;
 }
 .swipe-wrap {
   overflow: hidden;
