--- a/src/scss/side-menu.scss
+++ b/src/scss/side-menu.scss
@@ -31,6 +31,10 @@
   .active {
     background-color: #0275d8;
   }
+  #locations-container {
+    height: calc(100vh - 80px);
+    overflow-y: scroll;
+  }
 }
 
 // MAIN SECTION SIDE MENU ICONS AND OVERLAY
