--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
 }
 
 /* Wrapper so overflow hidden works on mobile devices */
