--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@ body {
 .wrapper {
   height: 100%;
   width: 100vw;
+  max-width: 100%;
   position: relative;
   overflow: hidden;
   max-width: 500px;
@@ -50,6 +51,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  max-width: 100%;
   height: 100vh;
   .delete-icon {
     position: absolute;
@@ -116,3 +118,5 @@ body {
     }
   }
 }
+
+
